migration_demo/azure/bicep/mgmt/mgmtArtifacts.bicep
@description('Name of the VNet')
param virtualNetworkName string = '${namingPrefix}-VNet'

@description('Name of the subnet in the virtual network')
param subnetName string = '${namingPrefix}-Subnet'

@description('Name of the subnet in the virtual network')
param aksSubnetName string = '${namingPrefix}-AKS-Subnet'

@description('Name of the Domain Controller subnet in the virtual network')
param dcSubnetName string = '${namingPrefix}-DC-Subnet'

@description('Name of the DR VNet')
param drVirtualNetworkName string = '${namingPrefix}-DR-VNet'

@description('Name of the DR subnet in the DR virtual network')
param drSubnetName string = '${namingPrefix}-DR-Subnet'

@description('Name of the NAT Gateway')
param natGatewayName string = '${namingPrefix}-NatGateway'

@description('Name of the DR network NAT Gateway')
param drNatGatewayName string = '${namingPrefix}-DR-NatGateway'

@description('The flavor of ArcBox to deploy. This migration demo supports ITPro only.')
@allowed([
  'ITPro'
])
param flavor string

@description('Azure Region to deploy the Log Analytics Workspace')
param location string = resourceGroup().location

@description('Name of the Log Analytics workspace used by VM Insights and Arc-enabled servers')
param logAnalyticsWorkspaceName string = '${namingPrefix}-LogAnalytics'

@description('Forces the VM Insights table readiness check to run on every deployment')
param vmInsightsTableWaitForceUpdateTag string = utcNow()

@description('Log retention in days for the Log Analytics workspace')
@minValue(30)
@maxValue(730)
param logAnalyticsRetentionInDays int = 30

@description('Choice to deploy Bastion to connect to the client VM')
param deployBastion bool = false

@description('Bastion host Sku name')
@allowed([
  'Basic'
  'Standard'
  'Developer'
])
param bastionSku string = 'Basic'

@description('Name of the Network Security Group')
param networkSecurityGroupName string = '${namingPrefix}-NSG'

@description('Name of the Bastion Network Security Group')
param bastionNetworkSecurityGroupName string = '${namingPrefix}-Bastion-NSG'

@description('DNS Server configuration')
param dnsServers array = []

@maxLength(7)
@description('The naming prefix for the nested virtual machines. Example: MigDem-Win2k19')
param namingPrefix string = 'MigDem'

var keyVaultName = toLower('${namingPrefix}${uniqueString(resourceGroup().id)}')

var subnetAddressPrefix = '10.16.1.0/24'
var addressPrefix = '10.16.0.0/16'
var aksSubnetPrefix = '10.16.76.0/22'
var dcSubnetPrefix = '10.16.2.0/24'
var drAddressPrefix = '172.16.0.0/16'
var drSubnetPrefix = '172.16.128.0/17'
var bastionSubnetName = 'AzureBastionSubnet'
var bastionSubnetRef = '${arcVirtualNetwork.id}/subnets/${bastionSubnetName}'
var bastionName = '${namingPrefix}-Bastion'
var bastionSubnetIpPrefix = '10.16.3.64/26'
var bastionPublicIpAddressName = '${bastionName}-PIP'
var vmInsightsDataCollectionRuleName = '${namingPrefix}-VMInsights-DCR'
var windowsMonitorInitiativeId = tenantResourceId('Microsoft.Authorization/policySetDefinitions', '9575b8b7-78ab-4281-b53b-d3c1ace2260b')
var linuxMonitorInitiativeId = tenantResourceId('Microsoft.Authorization/policySetDefinitions', '118f04da-0375-44d1-84e3-0fd9e1849403')
var contributorRoleDefinitionId = subscriptionResourceId('Microsoft.Authorization/roleDefinitions', 'b24988ac-6180-42a0-ab88-20f7382dd24c')
var readerRoleDefinitionId = subscriptionResourceId('Microsoft.Authorization/roleDefinitions', 'acdd72a7-3385-48ef-bd42-f606fba81ae7')

var primarySubnet = [
  {
    name: subnetName
    properties: {
      addressPrefix: subnetAddressPrefix
      privateEndpointNetworkPolicies: 'Disabled'
      privateLinkServiceNetworkPolicies: 'Enabled'
      networkSecurityGroup: {
        id: networkSecurityGroup.id
      }
      natGateway: (deployBastion || flavor != 'ITPro') ? {
        id: natGateway.id
      } : null
      defaultOutboundAccess: false
    }
  }
]
var bastionSubnet = bastionSku != 'Developer'
  ? [
      {
        name: 'AzureBastionSubnet'
        properties: {
          addressPrefix: bastionSubnetIpPrefix
          networkSecurityGroup: {
            id: bastionNetworkSecurityGroup.id
          }
        }
      }
    ]
  : []
var dataOpsSubnets = [
  {
    name: aksSubnetName
    properties: {
      addressPrefix: aksSubnetPrefix
      privateEndpointNetworkPolicies: 'Disabled'
      privateLinkServiceNetworkPolicies: 'Enabled'
      networkSecurityGroup: {
        id: networkSecurityGroup.id
      }
      natGateway: (deployBastion || flavor != 'ITPro') ? {
        id: natGateway.id
      } : null
      defaultOutboundAccess: false
    }
  }
  {
    name: dcSubnetName
    properties: {
      addressPrefix: dcSubnetPrefix
      privateEndpointNetworkPolicies: 'Disabled'
      privateLinkServiceNetworkPolicies: 'Enabled'
      networkSecurityGroup: {
        id: networkSecurityGroup.id
      }
      natGateway: (deployBastion || flavor != 'ITPro')
        ? {
            id: natGateway.id
          }
        : null
      defaultOutboundAccess: false
    }
  }
]

resource arcVirtualNetwork 'Microsoft.Network/virtualNetworks@2024-07-01' = {
  name: virtualNetworkName
  location: location
  properties: {
    addressSpace: {
      addressPrefixes: [
        addressPrefix
      ]
    }
    dhcpOptions: {
      dnsServers: dnsServers
    }
    subnets: (deployBastion == false && flavor != 'DataOps')
      ? primarySubnet
      : (deployBastion == false && flavor == 'DataOps')
          ? union(primarySubnet, dataOpsSubnets)
          : (deployBastion == true && flavor != 'DataOps')
              ? union(primarySubnet, bastionSubnet)
              : (deployBastion == true && flavor == 'DataOps')
                  ? union(primarySubnet, bastionSubnet, dataOpsSubnets)
                  : primarySubnet
  }
}

resource drVirtualNetwork 'Microsoft.Network/virtualNetworks@2024-07-01' = if (flavor == 'DataOps') {
  name: drVirtualNetworkName
  location: location
  properties: {
    addressSpace: {
      addressPrefixes: [
        drAddressPrefix
      ]
    }
    dhcpOptions: {
      dnsServers: dnsServers
    }
    subnets: [
      {
        name: drSubnetName
        properties: {
          addressPrefix: drSubnetPrefix
          networkSecurityGroup: {
            id: networkSecurityGroup.id
          }
          natGateway: (deployBastion || flavor != 'ITPro') ? {
            id: natGatewayDR.id
          } : null
          defaultOutboundAccess: false
        }
      }
    ]
  }
}

resource natGatewayPublicIp 'Microsoft.Network/publicIPAddresses@2024-05-01' = if (deployBastion || flavor != 'ITPro') {
  name: '${natGatewayName}-PIP'
  location: location
  properties: {
    publicIPAllocationMethod: 'Static'
    publicIPAddressVersion: 'IPv4'
    idleTimeoutInMinutes: 4
  }
  sku: {
    name: 'Standard'
  }
}

resource natGatewayDRPublicIp 'Microsoft.Network/publicIPAddresses@2024-05-01' = if (deployBastion || flavor == 'DataOps') {
  name: '${natGatewayName}-DR-PIP'
  location: location
  properties: {
    publicIPAllocationMethod: 'Static'
    publicIPAddressVersion: 'IPv4'
    idleTimeoutInMinutes: 4
  }
  sku: {
    name: 'Standard'
  }
}

resource natGateway 'Microsoft.Network/natGateways@2024-07-01' = if (deployBastion || flavor != 'ITPro') {
  name: natGatewayName
  location: location
  sku: {
    name: 'Standard'
  }
  properties: {
    publicIpAddresses: [
      {
        id: natGatewayPublicIp.id
      }
    ]
    idleTimeoutInMinutes: 4
  }
}

resource natGatewayDR 'Microsoft.Network/natGateways@2024-07-01' = if (deployBastion || flavor == 'DataOps') {
  name: drNatGatewayName
  location: location
  sku: {
    name: 'Standard'
  }
  properties: {
    publicIpAddresses: [
      {
        id: natGatewayDRPublicIp.id
      }
    ]
    idleTimeoutInMinutes: 4
  }
}

resource virtualNetworkName_peering_to_DR_vnet 'Microsoft.Network/virtualNetworks/virtualNetworkPeerings@2024-07-01' = if (flavor == 'DataOps') {
  parent: arcVirtualNetwork
  name: 'peering-to-DR-vnet'
  properties: {
    allowVirtualNetworkAccess: true
    allowForwardedTraffic: true
    allowGatewayTransit: false
    useRemoteGateways: false
    remoteVirtualNetwork: {
      id: drVirtualNetwork.id
    }
  }
}

resource drVirtualNetworkName_peering_to_primary_vnet 'Microsoft.Network/virtualNetworks/virtualNetworkPeerings@2024-07-01' = if (flavor == 'DataOps') {
  parent: drVirtualNetwork
  name: 'peering-to-primary-vnet'
  properties: {
    allowVirtualNetworkAccess: true
    allowForwardedTraffic: true
    allowGatewayTransit: false
    useRemoteGateways: false
    remoteVirtualNetwork: {
      id: arcVirtualNetwork.id
    }
  }
}

resource networkSecurityGroup 'Microsoft.Network/networkSecurityGroups@2024-05-01' = {
  name: networkSecurityGroupName
  location: location
  properties: {
    securityRules: [
      {
        name: 'allow_k8s_80'
        properties: {
          priority: 200
          protocol: 'Tcp'
          access: 'Allow'
          direction: 'Inbound'
          sourceAddressPrefix: '*'
          sourcePortRange: '*'
          destinationAddressPrefix: '*'
          destinationPortRange: '80'
        }
      }
      {
        name: 'allow_k8s_8080'
        properties: {
          priority: 201
          protocol: 'Tcp'
          access: 'Allow'
          direction: 'Inbound'
          sourceAddressPrefix: '*'
          sourcePortRange: '*'
          destinationAddressPrefix: '*'
          destinationPortRange: '8080'
        }
      }
      {
        name: 'allow_k8s_443'
        properties: {
          priority: 202
          protocol: 'Tcp'
          access: 'Allow'
          direction: 'Inbound'
          sourceAddressPrefix: '*'
          sourcePortRange: '*'
          destinationAddressPrefix: '*'
          destinationPortRange: '443'
        }
      }
      {
        name: 'allow_k8s_kubelet'
        properties: {
          priority: 203
          protocol: 'Tcp'
          access: 'Allow'
          direction: 'Inbound'
          sourceAddressPrefix: '*'
          sourcePortRange: '*'
          destinationAddressPrefix: '*'
          destinationPortRange: '10250'
        }
      }
      {
        name: 'allow_traefik_lb_external'
        properties: {
          priority: 204
          protocol: 'Tcp'
          access: 'Allow'
          direction: 'Inbound'
          sourceAddressPrefix: '*'
          sourcePortRange: '*'
          destinationAddressPrefix: '*'
          destinationPortRange: '32323'
        }
      }
      {
        name: 'allow_SQLMI_traffic'
        properties: {
          priority: 205
          protocol: 'Tcp'
          access: 'Allow'
          direction: 'Inbound'
          sourceAddressPrefix: '*'
          sourcePortRange: '*'
          destinationAddressPrefix: '*'
          destinationPortRange: '11433'
        }
      }
      {
        name: 'allow_Postgresql_traffic'
        properties: {
          priority: 206
          protocol: 'Tcp'
          access: 'Allow'
          direction: 'Inbound'
          sourceAddressPrefix: '*'
          sourcePortRange: '*'
          destinationAddressPrefix: '*'
          destinationPortRange: '15432'
        }
      }
      {
        name: 'allow_SQLMI_mirroring_traffic'
        properties: {
          priority: 207
          protocol: 'TCP'
          access: 'Allow'
          direction: 'Inbound'
          sourceAddressPrefix: '*'
          sourcePortRange: '*'
          destinationAddressPrefix: '*'
          destinationPortRange: '5022'
        }
      }
    ]
  }
}

resource bastionNetworkSecurityGroup 'Microsoft.Network/networkSecurityGroups@2024-05-01' = if (deployBastion == true) {
  name: bastionNetworkSecurityGroupName
  location: location
  properties: {
    securityRules: [
      {
        name: 'bastion_allow_https_inbound'
        properties: {
          priority: 200
          protocol: 'Tcp'
          access: 'Allow'
          direction: 'Inbound'
          sourceAddressPrefix: 'Internet'
          sourcePortRange: '*'
          destinationAddressPrefix: '*'
          destinationPortRange: '443'
        }
      }
      {
        name: 'bastion_allow_gateway_manager_inbound'
        properties: {
          priority: 201
          protocol: 'Tcp'
          access: 'Allow'
          direction: 'Inbound'
          sourceAddressPrefix: 'GatewayManager'
          sourcePortRange: '*'
          destinationAddressPrefix: '*'
          destinationPortRange: '443'
        }
      }
      {
        name: 'bastion_allow_load_balancer_inbound'
        properties: {
          priority: 202
          protocol: 'Tcp'
          access: 'Allow'
          direction: 'Inbound'
          sourceAddressPrefix: 'AzureLoadBalancer'
          sourcePortRange: '*'
          destinationAddressPrefix: '*'
          destinationPortRange: '443'
        }
      }
      {
        name: 'bastion_allow_host_comms'
        properties: {
          priority: 203
          protocol: '*'
          access: 'Allow'
          direction: 'Inbound'
          sourceAddressPrefix: 'VirtualNetwork'
          sourcePortRange: '*'
          destinationAddressPrefix: 'VirtualNetwork'
          destinationPortRanges: [
            '8080'
            '5701'
          ]
        }
      }
      {
        name: 'bastion_allow_ssh_rdp_outbound'
        properties: {
          priority: 204
          protocol: '*'
          access: 'Allow'
          direction: 'Outbound'
          sourceAddressPrefix: '*'
          sourcePortRange: '*'
          destinationAddressPrefix: 'VirtualNetwork'
          destinationPortRanges: [
            '22'
            '3389'
          ]
        }
      }
      {
        name: 'bastion_allow_azure_cloud_outbound'
        properties: {
          priority: 205
          protocol: 'Tcp'
          access: 'Allow'
          direction: 'Outbound'
          sourceAddressPrefix: '*'
          sourcePortRange: '*'
          destinationAddressPrefix: 'AzureCloud'
          destinationPortRange: '443'
        }
      }
      {
        name: 'bastion_allow_bastion_comms'
        properties: {
          priority: 206
          protocol: '*'
          access: 'Allow'
          direction: 'Outbound'
          sourceAddressPrefix: 'VirtualNetwork'
          sourcePortRange: '*'
          destinationAddressPrefix: 'VirtualNetwork'
          destinationPortRanges: [
            '8080'
            '5701'
          ]
        }
      }
      {
        name: 'bastion_allow_get_session_info'
        properties: {
          priority: 207
          protocol: '*'
          access: 'Allow'
          direction: 'Outbound'
          sourceAddressPrefix: '*'
          sourcePortRange: '*'
          destinationAddressPrefix: 'Internet'
          destinationPortRanges: [
            '80'
            '443'
          ]
        }
      }
    ]
  }
}

resource publicIpAddress 'Microsoft.Network/publicIPAddresses@2024-05-01' = if (deployBastion == true) {
  name: bastionPublicIpAddressName
  location: location
  properties: {
    publicIPAllocationMethod: 'Static'
    publicIPAddressVersion: 'IPv4'
    idleTimeoutInMinutes: 4
  }
  sku: {
    name: 'Standard'
  }
}

resource bastionHost 'Microsoft.Network/bastionHosts@2024-05-01' = if (deployBastion == true) {
  name: bastionName
  location: location
  sku: {
    name: bastionSku
  }
  properties: {
    virtualNetwork: bastionSku == 'Developer'
      ? {
          id: arcVirtualNetwork.id
        }
      : null
    ipConfigurations: bastionSku != 'Developer'
      ? [
          {
            name: 'IpConf'
            properties: {
              publicIPAddress: {
                id: publicIpAddress.id
              }
              subnet: {
                id: bastionSubnetRef
              }
            }
          }
        ]
      : null
  }
}

resource kv 'Microsoft.KeyVault/vaults@2024-04-01-preview' = {
  name: keyVaultName
  location: location
  properties: {
    tenantId: subscription().tenantId
    sku: {
      name: 'standard'
      family: 'A'
    }
    enabledForDeployment: true
    enabledForTemplateDeployment: true
    enabledForDiskEncryption: true
    enableRbacAuthorization: true
    publicNetworkAccess: 'Enabled'
    networkAcls: {
      bypass: 'AzureServices'
      defaultAction: 'Allow'
      ipRules: []
      virtualNetworkRules: []
    }
    // enablePurgeProtection is intentionally omitted. The Key Vault API rejects an explicit
    // `false` ("cannot be set to false"), especially when recovering a soft-deleted vault of the
    // same name. Omitting it leaves purge protection disabled so demo vaults remain cleanable.
  }
}

resource kvPrivateDnsZone 'Microsoft.Network/privateDnsZones@2020-06-01' = {
  name: 'privatelink.vaultcore.azure.net'
  location: 'global'
}

resource kvPrivateDnsZoneVnetLink 'Microsoft.Network/privateDnsZones/virtualNetworkLinks@2020-06-01' = {
  parent: kvPrivateDnsZone
  name: '${virtualNetworkName}-kv-link'
  location: 'global'
  properties: {
    registrationEnabled: false
    virtualNetwork: {
      id: arcVirtualNetwork.id
    }
  }
}

resource kvPrivateEndpoint 'Microsoft.Network/privateEndpoints@2024-05-01' = {
  name: '${keyVaultName}-pe'
  location: location
  properties: {
    subnet: {
      id: arcVirtualNetwork.properties.subnets[0].id
    }
    privateLinkServiceConnections: [
      {
        name: '${keyVaultName}-plsc'
        properties: {
          privateLinkServiceId: kv.id
          groupIds: ['vault']
        }
      }
    ]
  }
}

resource kvPrivateEndpointDnsZoneGroup 'Microsoft.Network/privateEndpoints/privateDnsZoneGroups@2024-05-01' = {
  parent: kvPrivateEndpoint
  name: 'default'
  properties: {
    privateDnsZoneConfigs: [
      {
        name: 'privatelink-vaultcore-azure-net'
        properties: {
          privateDnsZoneId: kvPrivateDnsZone.id
        }
      }
    ]
  }
}

resource logAnalyticsWorkspace 'Microsoft.OperationalInsights/workspaces@2023-09-01' = {
  name: logAnalyticsWorkspaceName
  location: location
  properties: {
    sku: {
      name: 'PerGB2018'
    }
    retentionInDays: logAnalyticsRetentionInDays
    features: {
      enableLogAccessUsingOnlyResourcePermissions: true
    }
    publicNetworkAccessForIngestion: 'Enabled'
    publicNetworkAccessForQuery: 'Enabled'
  }
}

resource vmInsightsSolution 'Microsoft.OperationsManagement/solutions@2015-11-01-preview' = {
  name: 'VMInsights(${logAnalyticsWorkspace.name})'
  location: location
  plan: {
    name: 'VMInsights(${logAnalyticsWorkspace.name})'
    product: 'OMSGallery/VMInsights'
    publisher: 'Microsoft'
    promotionCode: ''
  }
  properties: {
    workspaceResourceId: logAnalyticsWorkspace.id
  }
}

resource vmInsightsTableWaitIdentity 'Microsoft.ManagedIdentity/userAssignedIdentities@2023-01-31' = {
  name: '${namingPrefix}-VMInsights-TableWait'
  location: location
}

resource vmInsightsTableWaitReaderRoleAssignment 'Microsoft.Authorization/roleAssignments@2022-04-01' = {
  name: guid(logAnalyticsWorkspace.id, vmInsightsTableWaitIdentity.id, readerRoleDefinitionId)
  scope: logAnalyticsWorkspace
  properties: {
    principalId: vmInsightsTableWaitIdentity.properties.principalId
    principalType: 'ServicePrincipal'
    roleDefinitionId: readerRoleDefinitionId
  }
}

resource vmInsightsTableWait 'Microsoft.Resources/deploymentScripts@2023-08-01' = {
  name: '${namingPrefix}-WaitFor-VMInsightsTable'
  location: location
  kind: 'AzureCLI'
  identity: {
    type: 'UserAssigned'
    userAssignedIdentities: {
      '${vmInsightsTableWaitIdentity.id}': {}
    }
  }
  properties: {
    azCliVersion: '2.67.0'
    cleanupPreference: 'OnSuccess'
    environmentVariables: [
      {
        name: 'TABLE_URL'
        value: uri(environment().resourceManager, '${logAnalyticsWorkspace.id}/tables/InsightsMetrics?api-version=2022-10-01')
      }
    ]
    forceUpdateTag: vmInsightsTableWaitForceUpdateTag
    retentionInterval: 'P1D'
    timeout: 'PT10M'
    scriptContent: '''
      set -euo pipefail

      for attempt in $(seq 1 120); do
        if az rest --method get --url "$TABLE_URL" --only-show-errors >/dev/null 2>&1; then
          echo "InsightsMetrics table is available."
          exit 0
        fi

        echo "Waiting for InsightsMetrics table (attempt $attempt of 120)."
        sleep 5
      done

      echo "InsightsMetrics table was not available within 10 minutes." >&2
      exit 1
    '''
  }
  dependsOn: [
    vmInsightsSolution
    vmInsightsTableWaitReaderRoleAssignment
  ]
}

resource vmInsightsDataCollectionRule 'Microsoft.Insights/dataCollectionRules@2023-03-11' = {
  name: vmInsightsDataCollectionRuleName
  location: location
  properties: {
    description: 'Collects VM Insights performance data from Azure and Arc-enabled machines.'
    dataSources: {
      performanceCounters: [
        {
          name: 'VMInsightsPerfCounters'
          streams: [
            'Microsoft-InsightsMetrics'
          ]
          samplingFrequencyInSeconds: 60
          counterSpecifiers: [
            '\\VmInsights\\DetailedMetrics'
          ]
        }
      ]
      extensions: [
        {
          name: 'DependencyAgentDataSource'
          extensionName: 'DependencyAgent'
          extensionSettings: {}
          streams: [
            'Microsoft-ServiceMap'
          ]
        }
      ]
    }
    destinations: {
      logAnalytics: [
        {
          name: 'VMInsightsLogAnalytics'
          workspaceResourceId: logAnalyticsWorkspace.id
        }
      ]
    }
    dataFlows: [
      {
        streams: [
          'Microsoft-InsightsMetrics'
        ]
        destinations: [
          'VMInsightsLogAnalytics'
        ]
      }
      {
        streams: [
          'Microsoft-ServiceMap'
        ]
        destinations: [
          'VMInsightsLogAnalytics'
        ]
      }
    ]
  }
  dependsOn: [
    vmInsightsTableWait
  ]
}

resource windowsMonitorPolicyAssignment 'Microsoft.Authorization/policyAssignments@2024-04-01' = {
  name: 'windows-ama-vminsights'
  location: location
  identity: {
    type: 'SystemAssigned'
  }
  properties: {
    displayName: 'Configure Windows machines for VM Insights'
    description: 'Deploys Azure Monitor Agent and associates Azure VMs, VM scale sets, and Arc-enabled Windows servers with the VM Insights DCR.'
    policyDefinitionId: windowsMonitorInitiativeId
    enforcementMode: 'Default'
    parameters: {
      effect: {
        value: 'DeployIfNotExists'
      }
      scopeToSupportedImages: {
        value: true
      }
      DcrResourceId: {
        value: vmInsightsDataCollectionRule.id
      }
    }
  }
}

resource linuxMonitorPolicyAssignment 'Microsoft.Authorization/policyAssignments@2024-04-01' = {
  name: 'linux-ama-vminsights'
  location: location
  identity: {
    type: 'SystemAssigned'
  }
  properties: {
    displayName: 'Configure Linux machines for VM Insights'
    description: 'Deploys Azure Monitor Agent and associates Azure VMs, VM scale sets, and Arc-enabled Linux servers with the VM Insights DCR.'
    policyDefinitionId: linuxMonitorInitiativeId
    enforcementMode: 'Default'
    parameters: {
      effect: {
        value: 'DeployIfNotExists'
      }
      scopeToSupportedImages: {
        value: true
      }
      dcrResourceId: {
        value: vmInsightsDataCollectionRule.id
      }
    }
  }
}

resource windowsMonitorPolicyRoleAssignment 'Microsoft.Authorization/roleAssignments@2022-04-01' = {
  name: guid(resourceGroup().id, windowsMonitorPolicyAssignment.id, contributorRoleDefinitionId)
  properties: {
    principalId: windowsMonitorPolicyAssignment.identity.principalId
    principalType: 'ServicePrincipal'
    roleDefinitionId: contributorRoleDefinitionId
  }
}

resource linuxMonitorPolicyRoleAssignment 'Microsoft.Authorization/roleAssignments@2022-04-01' = {
  name: guid(resourceGroup().id, linuxMonitorPolicyAssignment.id, contributorRoleDefinitionId)
  properties: {
    principalId: linuxMonitorPolicyAssignment.identity.principalId
    principalType: 'ServicePrincipal'
    roleDefinitionId: contributorRoleDefinitionId
  }
}

output vnetId string = arcVirtualNetwork.id
output subnetId string = arcVirtualNetwork.properties.subnets[0].id
output keyVaultName string = keyVaultName
output keyVaultId string = kv.id
output logAnalyticsWorkspaceId string = logAnalyticsWorkspace.id
output vmInsightsDataCollectionRuleId string = vmInsightsDataCollectionRule.id
